Implementacion Captchav3, mejora navbar, y autologout
Se implementarion 3 funciones importantes para el sistema

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,36 +7,31 @@
   <meta name="description" content="AccESCOM - Sistema de control de acceso ESCOM" />
   <title>AccESCOM</title>
 
-  <!-- Favicon “clásico” que todos los navegadores buscan -->
-<link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+  <!-- Favicon "clásico" que todos los navegadores buscan -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
 
-<!-- Opcionales de alta resolución -->
-<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <!-- Opcionales de alta resolución -->
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
 
-<!-- Apple touch icon (elige uno) -->
-<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png">
+  <!-- Apple touch icon (elige uno) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png">
 
-<!-- Manifest del /public -->
-<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-<meta name="theme-color" content="#ffffff">
+  <!-- Manifest del /public -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <meta name="theme-color" content="#ffffff">
 
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+
+  <!-- Google reCAPTCHA v3 -->
+  <script src="https://www.google.com/recaptcha/api.js?render=%REACT_APP_RECAPTCHA_SITE_KEY%"></script>
 </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6LfMKRAsAAAAAGosilcyD-88jVS4xRv_CY-ri5Hl"></script>
   </body>
 </html>
